--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Product Recommendation System{% endblock %}</title>
+    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='images/logo.svg') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -40,8 +41,10 @@
             gap: 0.5rem;
         }
 
-        .navbar-brand i {
-            color: var(--secondary-color);
+        .navbar-brand svg {
+            width: 32px;
+            height: 32px;
+            margin-right: 8px;
         }
 
         .nav-link {
@@ -238,8 +241,11 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="/">
-                <i class="fas fa-robot"></i>
-                Product RecSys
+                <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M20 8V6C20 3.79086 18.2091 2 16 2C13.7909 2 12 3.79086 12 6V8H8V26C8 27.1046 8.89543 28 10 28H22C23.1046 28 24 27.1046 24 26V8H20ZM14 6C14 4.89543 14.8954 4 16 4C17.1046 4 18 4.89543 18 6V8H14V6Z" fill="#3498db"/>
+                    <path d="M13 12H15V20H13V12ZM17 12H19V20H17V12Z" fill="#2c3e50"/>
+                </svg>
+                DukanBuddy
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
