--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
             min-height: 100vh;
             display: flex;
             flex-direction: column;
+            padding:20vw;
         }
 
         .navbar {
